<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:configChanges="keyboardHidden|orientation"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/register_dimen">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.andreabaccega.widget.FormEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="text"
                whatever:testType="nocheck"
                whatever:emptyErrorString="@string/empty_name"
                whatever:testErrorString="@string/error_name"
                android:hint="@string/hint_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.andreabaccega.widget.FormEditText
                android:id="@+id/input_lastname"
                android:inputType="text"
                whatever:testType="nocheck"
                whatever:emptyErrorString="@string/empty_lastname"
                whatever:testErrorString="@string/error_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_lastname" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.andreabaccega.widget.FormEditText
                android:id="@+id/input_email"
                whatever:testType="email"
                android:inputType="textEmailAddress"
                whatever:emptyErrorString="@string/empty_email"
                whatever:testErrorString="@string/error_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.andreabaccega.widget.FormEditText
                android:id="@+id/input_phone"
                android:inputType="phone"
                whatever:testType="phone"
                whatever:emptyErrorString="@string/empty_phone"
                whatever:testErrorString="@string/error_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_runner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.andreabaccega.widget.FormEditText
                android:id="@+id/input_runner"
                whatever:testType="nocheck"
                android:inputType="text"
                whatever:emptyErrorString="@string/empty_runner"
                whatever:testErrorString="@string/error_runner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_runner" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:backgroundTint="@color/title"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/register"
            android:id="@+id/register_button"/>
    </LinearLayout>
</ScrollView>