<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:whatever="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <com.synnapps.carouselview.CarouselView
        android:id="@+id/carouselView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:fillColor="#FFFFFFFF"
        app:pageColor="#00000000"
        app:radius="6dp"
        app:slideInterval="3000"
        app:strokeColor="#FF777777"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/register_dimen">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="250dp"
                android:layout_height="110dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/splash"
                android:visibility="visible" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                card_view:cardBackgroundColor="#a6ffffff"
                card_view:cardElevation="0dp"

                android:layout_marginBottom="15dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:text="@string/welcome"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_name"
                        app:hintTextAppearance="@style/TextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.andreabaccega.widget.FormEditText
                            android:id="@+id/input_name"
                            whatever:emptyErrorString="@string/empty_name"
                            whatever:testErrorString="@string/error_name"
                            whatever:testType="nocheck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/hint_name"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textSize="25sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_lastname"
                        app:hintTextAppearance="@style/TextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.andreabaccega.widget.FormEditText
                            android:id="@+id/input_lastname"
                            whatever:emptyErrorString="@string/empty_lastname"
                            whatever:testErrorString="@string/error_lastname"
                            whatever:testType="nocheck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/hint_lastname"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textSize="25sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_email"
                        app:hintTextAppearance="@style/TextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.andreabaccega.widget.FormEditText
                            android:id="@+id/input_email"
                            whatever:emptyErrorString="@string/empty_email"
                            whatever:testErrorString="@string/error_email"
                            whatever:testType="email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:textSize="25sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_phone"
                        app:hintTextAppearance="@style/TextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.andreabaccega.widget.FormEditText
                            android:id="@+id/input_phone"
                            whatever:emptyErrorString="@string/empty_phone"
                            whatever:testErrorString="@string/error_phone"
                            whatever:testType="phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/hint_phone"
                            android:inputType="phone"
                            android:singleLine="true"
                            android:textSize="25sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_runner"
                        app:hintTextAppearance="@style/TextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.andreabaccega.widget.FormEditText
                            android:id="@+id/input_runner"
                            whatever:emptyErrorString="@string/empty_runner"
                            whatever:testErrorString="@string/error_runner"
                            whatever:testType="nocheck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/hint_runner"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textSize="25sp" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/register_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/title"
                        android:text="@string/register_b"
                        android:textColor="@color/white"
                        android:textSize="25sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </com.synnapps.carouselview.CarouselView>
</android.support.constraint.ConstraintLayout>