<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_simple">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:src="@drawable/splash"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight= "20dp"
            android:layout_marginTop="5dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/usuario_txt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/txt_User"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center" />

                <com.andreabaccega.widget.FormEditText
                    whatever:testType="personName"
                    whatever:testErrorString="@string/error_emailnotvalid"
                    whatever:emptyErrorString="@string/error_emailempty"
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dip"
                    android:singleLine="true"
                    android:hint="@string/txtHint_User"
                    android:textSize="20sp"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    />

                <TextView
                    android:id="@+id/password_txt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/txt_Password"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <com.andreabaccega.widget.FormEditText
                    android:id="@+id/password"
                    whatever:emptyErrorString="@string/error_passwordempty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:hint="@string/txtHint_Password"
                    android:drawablePadding="10dp"/>

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btnLogin"
                        app:backgroundTint="@color/colorAccent"
                        android:backgroundTint="@color/colorAccent"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_marginBottom="10dp"
                        android:text="@string/txtBtn_Login"/>

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>