<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="keyboardHidden|orientation"
    android:orientation="vertical"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".RunnersFragment">
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"/>
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
    <Button
        android:id="@+id/btnExport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/export"
        android:textColor="@color/white"
        android:textSize="10sp"

        android:text="@string/export_db"/>
    <Button
        android:id="@+id/btnUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/upload"
        android:textColor="@color/white"
        android:textSize="10sp"

        android:text="@string/upload_db"/>
    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="10sp"
        android:backgroundTint="@color/alert"
        android:textColor="@color/white"

        android:text="@string/delete_db"/>
</LinearLayout>
